removed checking user avatar/name/lastname fixed tournament model
