# server-go/pkg/gateways/rest/tournament/tournament.go
@@ -12,7 +12,6 @@ func Setup(r *gin.RouterGroup, cases usecase.Cases) {
 
 	// Публичные endpoints для турниров
 	tournaments.POST("/filter", Filter(cases.Tournament))
-	tournaments.GET("/:tournament_id/participants", GetTournamentParticipants(cases.Tournament))
 	tournaments.GET("/:tournament_id/waitlist", GetTournamentWaitlist(cases.Waitlist))
 	tournaments.POST("/:tournament_id/waitlist", AddToTournamentWaitlist(cases.Waitlist))
 	tournaments.DELETE("/:tournament_id/waitlist", RemoveFromTournamentWaitlist(cases.Waitlist))
